--- a/sections/business-or-pleasure.liquid
+++ b/sections/business-or-pleasure.liquid
@@ -1017,7 +1017,7 @@
           "type": "textarea",
           "id": "subheading",
           "label": "Subheading",
-          "default": "Business"
+          "default": "Business ™"
         },
         {
           "type": "textarea",
@@ -1028,7 +1028,7 @@
           "type": "textarea",
           "id": "left_link_text",
           "label": "Left Link Text",
-          "default": "Business"
+          "default": "Business ™"
         },
         {
           "type": "url",
@@ -1039,7 +1039,7 @@
           "type": "textarea",
           "id": "right_link_text",
           "label": "Right Link Text",
-          "default": "Pleasure"
+          "default": "Pleasure ®"
         },
         {
           "type": "url",
